testcases/error/invalid_operand.veryl
module invalid_operand {
    let _a: logic = +logic;
}
